# coding-problems

./: pyproject.toml
problems/codility/: empty_glasses.py  movies.json  search_by_tags.py
